Fix relationship header and advanced search spacing

--- a/app/assets/stylesheets/osu.scss
+++ b/app/assets/stylesheets/osu.scss
@@ -188,6 +188,10 @@ table[data-behavior="child-relationships"] > tbody > tr > td {
   max-width: 0;
 }
 
+.form-group.advanced-search-facet {
+  margin-bottom:2em
+}
+
 .form-group .controlled_vocabulary {
   width: 100% !important;
 }
